--- a/index.html
+++ b/index.html
@@ -3,10 +3,23 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="index.css">
     <title>Expanding Cards</title>
   </head>
   <body>
-    <div id="root"></div>
-    <script type="module" src="/src/main.jsx"></script>
+    <div class="container">
+      <div class="cont">
+        <h1>Chandelure</h1>
+      </div>
+      <div class="img2">
+          <h1>Eevee</h1>
+      </div>
+      <div class="img3">
+          <h1>Evo</h1>
+      </div>
+      <div class="img4">
+        <h1>Hoenn</h1>
+      </div>
+      </div>
   </body>
 </html>
