Se agrego otro panel

--- a/index.html
+++ b/index.html
@@ -14,6 +14,9 @@
       <div class="img2">
           <h1>Eevee</h1>
       </div>
+      <div class="img4">
+        <h1>Hoenn</h1>
+      </div>
       <div class="img3">
           <h1>Evo</h1>
       </div>
